--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && firebase deploy --only hosting"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "firebase": "^11.0.2",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
+    "mammoth": "^1.8.0",
     "next": "15.0.3",
     "postcss": "^8.4.31",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7"
   },
