--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "mammoth": "^1.8.0",
     "next": "15.0.3",
     "postcss": "^8.4.31",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.5",
