--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "deploy": "next build && firebase deploy --only hosting"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -31,8 +33,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/react": "18.3.12",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "typescript": "5.6.3"
   }
 }
