--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@next/third-parties": "latest"
   },
   "devDependencies": {
     "@types/react": "18.3.12",
