--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "deploy": "next build && firebase deploy --only hosting"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@next/third-parties": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -31,8 +33,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.5",
-    "tailwindcss-animate": "^1.0.7",
-    "@next/third-parties": "latest"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "18.3.12",
